2009-02-22  Matthias Clasen  <mclasen@redhat.com>

	Bug 572672 – glib/gthread.c: argument is different type

	* glib/gthread.c (g_once_init_leave): Add a necessary cast back.
	Pointed out by Kazuki Iwamoto.

2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.8 ===

2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	Fix strict aliasing warnings and viiolations to make GLib and
	GLib users buildable with gcc 4.4. Patch by Jakub Jelinek.

	* glib/gatomic.[hc]: Add G_GNUC_MAY_ALIAS to pointer arguments,
	fix macro versions to only operate on objects of the same size.

	* glib/gdataset.c:
	* glib/gthread.[hc]:
	* glib/gdatasetprivate.h: Remove unnecessary casts in 
	g_atomic_pointer_get calls.
	
2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.7 ===

2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-02-13  Mathias Hasselmann  <hasselmm@gnome.org>

	Add note about g_utf8_offset_to_pointer() not checking string
	boundaries.

	* glib/gutf8.c (g_utf8_offset_to_pointer()): See summary.

2999-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 523742 – Use noinst for non-installable libraries

	* tests/Makefile.am: use noninst_LTLIBRARIES for noninstalled 
	libraries.Patch by Björn Lindqvist

2009-02-06  Murray Cumming  <murrayc@murrayc.com>

	* gio/gfilterinputstream.c:
	* gio/gfilteroutputstream.c: Correct the grammar in some property 
	documentation.
	* gio/gdatainputstream.c:
	* glib/gregex.c: Correct the spelling of 
	occurrence in documentation.

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.6 ===

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-01-31  Matthias Clasen  <mclasen@redhat.com>
